--- a/01-HTML_Level_One/Login.html
+++ b/01-HTML_Level_One/Login.html
@@ -6,6 +6,7 @@
     <!-- Use cmd+/ to get the html comment line -->
     <meta charset="utf-8">
     <title> Showdom / Media Gallore </title>
+    <link rel="stylesheet" href="MediaGalore_master.css">
   </head>
   <body>
     <!-- The body contains the actual content -->
