--- a/01-HTML_Level_One/MediaGalore.html
+++ b/01-HTML_Level_One/MediaGalore.html
@@ -6,12 +6,13 @@
     <!-- Use cmd+/ to get the html comment line -->
     <meta charset="utf-8">
     <title> Showdom / Media Gallore </title>
+    <link rel="stylesheet" href="MediaGalore_master.css">
   </head>
   <body>
     <!-- The body contains the actual content -->
     <h1> Showdom </h1>
     <br>
-    <h6>Profile | <a href="Login.html">Logout</a></h6> <img src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80" alt="django image not found">
+    <h6>Profile | <a href="Login.html">Logout</a></h6> <img src="C:\Users\jerry\OneDrive\Documents\Pictures\750px-Royal_crown_curved.svg.png" alt="profile image not found">
     <br>
     <!--<form action="">
       <input type="email" name="useremail" value="Email Here">
