--- a/01-HTML_Level_One/Signup.html
+++ b/01-HTML_Level_One/Signup.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Signup Page</title>
+    <link rel="stylesheet" href="MediaGalore_master.css">
   </head>
   <body>
     <h1>Showdom</h1>
