--- a/01-HTML_Level_One/Signup.html
+++ b/01-HTML_Level_One/Signup.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="MediaGalore_master.css">
   </head>
   <body>
-    <h1>Showdom</h1>
-    <h2>Sign Up</h2>
+    <h1 class="title">Showdom</h1>
+    <h2 id="signUp">Sign Up</h2>
 
       <!-- Things we will cover
       1. Linking Radio Buttons
