--- a/01-HTML_Level_One/Profile.html
+++ b/01-HTML_Level_One/Profile.html
@@ -5,21 +5,14 @@
     <!-- Use html+Tab to get the boilerplate  -->
     <!-- Use cmd+/ to get the html comment line -->
     <meta charset="utf-8">
-    <title> Showdom / Media Gallore </title>
+    <title> Profile </title>
     <link rel="stylesheet" href="MediaGalore_master.css">
   </head>
   <body>
     <!-- The body contains the actual content -->
     <h1 class="title"> Showdom </h1>
     <form action="MediaGalore.html" method="get">
-      <h5><a href="Login.html">Log In</a> | <a href="Signup.html">Sign Up</a></h5>
-      <label for="userem">Email: </label>
-      <input id="userem" type="email" name="useremail" placeholder="Email Here" required>
-
-      <label for="userpass">Password: </label>
-      <input id="userpass" type="password" name="userpassword" value="" required>
-
-      <input type="submit" name="" value="Log In">
+      <input type="submit" name="" value="Media Galore">
     </form>
   </body>
 </html>
