removed folders not needed

--- a/01-HTML_Level_One/MediaGalore.html
+++ b/01-HTML_Level_One/MediaGalore.html
@@ -12,8 +12,8 @@
     <!-- The body contains the actual content -->
     <h1 class="title"> Showdom </h1>
     <br>
-    <div class="profile">
-      <img src="C:\Users\jerry\OneDrive\Documents\Pictures\750px-Royal_crown_curved.svg.png" alt="profile image not found">
+    <div>
+      <img src="C:\Users\jerry\OneDrive\Documents\Pictures\750px-Royal_crown_curved.svg.png" alt="profile image not found" width="25px" height="25px">
       <h6 class="profile"><a href="Profile.html">Profile</a> | <a href="Login.html">Logout</a></h6> 
     </div>
     
