--- a/01-HTML_Level_One/Login.html
+++ b/01-HTML_Level_One/Login.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!--  The head contains Meta-data -->
-    <!-- Use html+Tab to get the boilerplate  -->
-    <!-- Use cmd+/ to get the html comment line -->
-    <meta charset="utf-8">
-    <title> Showdom / Media Gallore </title>
-    <link rel="stylesheet" href="MediaGalore_master.css">
-  </head>
-  <body>
-    <!-- The body contains the actual content -->
-    <h1 class="title"> Showdom </h1>
-    <form action="MediaGalore.html" method="get">
-      <h5><a href="Login.html">Log In</a> | <a href="Signup.html">Sign Up</a></h5>
-      <label for="userem">Email: </label>
-      <input id="userem" type="email" name="useremail" placeholder="Email Here" required>
 
-      <label for="userpass">Password: </label>
-      <input id="userpass" type="password" name="userpassword" value="" required>
+<head>
+  <!--  The head contains Meta-data -->
+  <!-- Use html+Tab to get the boilerplate  -->
+  <!-- Use cmd+/ to get the html comment line -->
+  <meta charset="utf-8">
+  <title> Showdom / Media Gallore </title>
+  <link rel="stylesheet" href="MediaGalore_master.css">
+</head>
 
-      <input type="submit" name="" value="Log In">
-    </form>
-  </body>
+<body>
+  <!-- The body contains the actual content -->
+  <h1 class="title"> Showdom </h1>
+  <h5 id="userprofile"><a href="Login.html">Log In</a> | <a href="Signup.html">Sign Up</a></h5>
+  <br><br>
+  <form action="MediaGalore.html" id="loginform" method="get">
+    <label for="userem"><strong>Email:</strong></label>
+    <input id="userem" type="email" name="useremail" placeholder="Email Here" required>
+    <br>
+    <label for="userpass"><strong>Password:</strong></label>
+    <input id="userpass" type="password" name="userpassword" value="" required>
+    <br>
+    <input type="submit" id="loginSignupButton" name="" value="Log In">
+  </form>
+</body>
+
 </html>
