--- a/01-HTML_Level_One/MediaGalore.html
+++ b/01-HTML_Level_One/MediaGalore.html
@@ -1,64 +1,74 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!--  The head contains Meta-data -->
-    <!-- Use html+Tab to get the boilerplate  -->
-    <!-- Use cmd+/ to get the html comment line -->
-    <meta charset="utf-8">
-    <title> Showdom / Media Gallore </title>
-    <link rel="stylesheet" href="MediaGalore_master.css">
-  </head>
-  <body>
-    <!-- The body contains the actual content -->
-    <h1 class="title"> Showdom </h1>
-    <br>
-    <div>
-      <img src="C:\Users\jerry\OneDrive\Documents\Pictures\750px-Royal_crown_curved.svg.png" alt="profile image not found" width="25px" height="25px">
-      <h6 class="profile"><a href="Profile.html">Profile</a> | <a href="Login.html">Logout</a></h6> 
-    </div>
-    
-    <br>
-    <!--<form action="">
-      <input type="email" name="useremail" value="Email Here">
-      <input type="password" name="password" value="">
-      <input type="submit" name="" value="Log In | Sign Up">
-    </form>
-    <br>-->
-  
-    <form>
-      <h3 class="mainFunc"><strong> Add </strong></h3> 
-      <input type="text" name="addshow" value="">
-      <input type="submit" name="" value="Add"> 
+
+<head>
+  <!--  The head contains Meta-data -->
+  <!-- Use html+Tab to get the boilerplate  -->
+  <!-- Use cmd+/ to get the html comment line -->
+  <meta charset="utf-8">
+  <title> Showdom / Media Gallore </title>
+  <link rel="stylesheet" href="MediaGalore_master.css">
+</head>
+
+<body>
+  <!-- The body contains the actual content -->
+  <h1 class="title"> Showdom </h1>
+  <div id="user">
+    <span id="userimage">
+      <img src="C:\Users\jerry\OneDrive\Documents\Pictures\750px-Royal_crown_curved.svg.png"
+        alt="profile image not found" width="25px" height="25px">
+    </span>
+    <span id="userprofile">
+      <h6 class="profile"><a href="Profile.html">Profile</a> | <a href="Login.html">Logout</a></h6>
+    </span>
+  </div>
+
+  <div id="main">
+
+    <form id="mainFuncAdd">
+      <label for="addShowFunc">
+        <h3 id="addHeader" class="mainFunc"><strong> Add </strong></h3>
+      </label>
+      <input type="text" id="addShowFunc" name="addshow" value="">
+      <input type="submit" name="" value="Add">
     </form>
 
-    <form>
-      <h3 class="mainFunc"><strong> Generate at Random </strong></h3>
-      <label for="randgen"><input type="submit" name="" value="Generate"></label>
+    <form id="mainFuncGen">
+      <label for="genShowFunc">
+        <h3 id="genHeader" class="mainFunc"><strong> Generate at Random </strong></h3>
+      </label>
+      <label for="randgen"><input type="submit" id="genShowFunc" name="" value="Generate"></label>
       <input id="randgen" type="text" name="randomshow" placeholder="Placeholder here">
+      <p></p>
+      <input id="currShow" type="textbox" name="currentShow"
+        placeholder="A pop up here to ask if show should be placed in current">
     </form>
 
-    <p> A pop up here to ask if show should be placed in current</p>
-    <input type="textbox" name="currentShow" placeholder="current">
     <br>
-    <h3 class="mainFunc"><strong> View </strong></h3>
-    <table border="1">
-      <thead>
-        <th>Date Added</th>
-        <th>Name</th>
-        <th>Source</th>
-      </thead>
-      <tr>
-        <td>Today</td>
-        <td>Show</td>
-        <td>TV</td>
-        <td>
-          <form>
-            <input type="submit" name="" value="Edit"> | <input type="submit" name="" value="Remove">
-          </form>
-        </td>
-      </tr>
-    </table>
-    
+    <div id="mainFuncView">
+      <h3 id="viewHeader" class="mainFunc"><strong> View </strong></h3>
+      <table border="1">
+        <thead>
+          <th>Date Added</th>
+          <th>Name</th>
+          <th>Source</th>
+        </thead>
+        <tr>
+          <td>Today</td>
+          <td>Show</td>
+          <td>TV</td>
+          <td>
+            <form>
+              <input type="submit" name="" value="Edit"> | <input type="submit" name="" value="Remove">
+            </form>
+          </td>
+        </tr>
+      </table>
+    </div>
 
-  </body>
+
+  </div>
+
+</body>
+
 </html>
