--- a/01-HTML_Level_One/Signup.html
+++ b/01-HTML_Level_One/Signup.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Signup Page</title>
-    <link rel="stylesheet" href="MediaGalore_master.css">
-  </head>
-  <body>
-    <h1 class="title">Showdom</h1>
-    <h2 id="signUp">Sign Up</h2>
 
-      <!-- Things we will cover
-      1. Linking Radio Buttons
-      2. Drop-down Menus
-      3. Text Area inputs -->
+<head>
+  <meta charset="utf-8">
+  <title>Signup Page</title>
+  <link rel="stylesheet" href="MediaGalore_master.css">
+</head>
 
+<body>
+  <h1 class="title">Showdom</h1>
+  <h5 id="userprofile"><a href="Login.html">Log In</a> | <a href="Signup.html">Sign Up</a></h5>
+  <br>
+  <h2 id="signUp">Sign Up</h2>
 
-        <form action="Login.html" method="get">
-          <label for="firstname">First Name:</label>
-          <input type="text" id="firstname" name="firstName" placeholder="First Name" required>
+  <form action="Login.html" id="signupform" method="get">
+    <label for="firstname">First Name:</label>
+    <input type="text" id="firstname" name="firstName" placeholder="First Name" required>
+    <p></p>
+    <label for="lastname">Last Name:</label>
+    <input type="text" id="lastname" name="lastName" placeholder="Last Name" required>
 
-          <label for="lastname">Last Name:</label>
-          <input type="text" id="lastname" name="lastName" placeholder="Last Name" required>
+    <p></p>
 
-          <p></p>
+    <label for="useremail">Email:</label>
+    <input type="email" id="useremail" name="userEmail" placeholder="name@email.com" required>
+    <p></p>
+    <label for="userpassword">Password:</label>
+    <input type="password" id="userpassword" name="userPassword" value="" required>
+    <br>
+    <input type="submit" id="loginSignupButton" name="" value="Sign Up">
 
-          <label for="useremail">Email:</label>
-          <input type="email" id="useremail" name="userEmail" placeholder="name@email.com" required>
-
-          <label for="userpassword">Password:</label>
-          <input type="password" id="userpassword" name="userPassword" value="" required>
-
-          <input type="submit" name="" value="Sign Up">
-
-        </form>
+  </form>
 
 
-  </body>
+</body>
+
 </html>
