--- a/01-HTML_Level_One/Login.html
+++ b/01-HTML_Level_One/Login.html
@@ -6,23 +6,59 @@
   <!-- Use html+Tab to get the boilerplate  -->
   <!-- Use cmd+/ to get the html comment line -->
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
   <title> Showdom / Media Gallore </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="MediaGalore_master.css">
 </head>
 
 <body>
-  <!-- The body contains the actual content -->
-  <h1 class="title"> Showdom </h1>
-  <h5 id="userprofile"><a href="Login.html">Log In</a> | <a href="Signup.html">Sign Up</a></h5>
+  <nav class="navbar navbar-expand-lg bg-green">
+    <div class="container-fluid">
+      <h1 class="title"> Showdom </h1>
+      <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
+      <ul class="navbar-nav mb-2 justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link" href="Login.html">Logout</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Signup.html">Signup</a>
+        </li>
+        <!-- <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            </a>
+            <ul class="dropdown-menu">
+              <li class="nav-item">
+                <a class="nav-link" href="Login.html">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Signup.html">Signup</a>
+              </li>
+            </ul>
+          </li> -->
+      </ul>
+      <!-- </div> -->
+    </div>
+  </nav>
+
+  <!-- <h1 class="title"> Showdom </h1>
+  <h5 id="userprofile"><a href="Login.html">Log In</a> | <a href="Signup.html">Sign Up</a></h5> -->
   <br><br>
   <form action="MediaGalore.html" id="loginform" method="get">
-    <label for="userem"><strong>Email:</strong></label>
-    <input id="userem" type="email" name="useremail" placeholder="Email Here" required>
-    <br>
-    <label for="userpass"><strong>Password:</strong></label>
-    <input id="userpass" type="password" name="userpassword" value="" required>
-    <br>
-    <input type="submit" id="loginSignupButton" name="" value="Log In">
+    <div class="form-floating mb-3">
+      <input type="email" class="form-control" id="userem" name="useremail" placeholder="name@email.com" required>
+      <label for="userem" class="form-label"><strong>Email:</strong></label>
+    </div>
+    <div class="form-floating">
+      <input id="userpass" type="password" name="userpassword" value="" class="form-control" placeholder="password"
+        required>
+      <label for="userpass" class="form-label"><strong>Password:</strong></label>
+    </div>
+    <p></p>
+    <input type="submit" class="btn btn-primary" id="loginSignupButton" name="" value="Log In">
   </form>
 </body>
 
