--- a/01-HTML_Level_One/Signup.html
+++ b/01-HTML_Level_One/Signup.html
@@ -3,32 +3,74 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
   <title>Signup Page</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="MediaGalore_master.css">
 </head>
 
 <body>
-  <h1 class="title">Showdom</h1>
-  <h5 id="userprofile"><a href="Login.html">Log In</a> | <a href="Signup.html">Sign Up</a></h5>
-  <br>
+  <nav class="navbar navbar-expand-lg bg-green">
+    <div class="container-fluid">
+      <h1 class="title"> Showdom </h1>
+      <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
+      <ul class="navbar-nav mb-2 justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link" href="Login.html">Logout</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Signup.html">Signup</a>
+        </li>
+        <!-- <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            </a>
+            <ul class="dropdown-menu">
+              <li class="nav-item">
+                <a class="nav-link" href="Login.html">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Signup.html">Signup</a>
+              </li>
+            </ul>
+          </li> -->
+      </ul>
+      <!-- </div> -->
+    </div>
+  </nav>
+  <!-- <h1 class="title">Showdom</h1>
+  <h5 id="userprofile"><a href="Login.html">Log In</a> | <a href="Signup.html">Sign Up</a></h5> -->
   <h2 id="signUp">Sign Up</h2>
 
   <form action="Login.html" id="signupform" method="get">
-    <label for="firstname">First Name:</label>
-    <input type="text" id="firstname" name="firstName" placeholder="First Name" required>
+    <div class="form-floating">
+      <input type="text" class="form-control" id="firstname" name="firstName" placeholder="First Name" required>
+      <label for="firstname" class="form-label">First Name:</label>
+    </div>
     <p></p>
-    <label for="lastname">Last Name:</label>
-    <input type="text" id="lastname" name="lastName" placeholder="Last Name" required>
-
+    <div class="form-floating">
+      <input type="text" class="form-control" id="lastname" name="lastName" placeholder="Last Name" required>
+      <label for="lastname" class="form-label">Last Name:</label>
+    </div>
     <p></p>
-
-    <label for="useremail">Email:</label>
-    <input type="email" id="useremail" name="userEmail" placeholder="name@email.com" required>
-    <p></p>
-    <label for="userpassword">Password:</label>
-    <input type="password" id="userpassword" name="userPassword" value="" required>
-    <br>
-    <input type="submit" id="loginSignupButton" name="" value="Sign Up">
+    <div class="form-floating mb-3">
+      <input type="email" class="form-control" id="userem" name="userEmail" placeholder="name@email.com"
+        aria-describedby="emailHelp" required>
+      <label for="userem" class="form-label">Email:</label>
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="form-floating">
+      <input type="password" id="userpassword" name="userPassword" value="" class="form-control"
+        aria-describedby="passwordHelpBlock" placeholder="Password" required>
+      <label for="userpassword" class="form-label">Password:</label>
+      <div id="passwordHelpBlock" class="form-text">
+        Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special
+        characters, or emoji.
+      </div>
+    </div>
+    <input type="submit" class="btn btn-primary" id="loginSignupButton" name="" value="Sign Up">
 
   </form>
 
